name:    ltl
version: 0.0.0

category: Language

synopsis: Linear Temporal Logic

description:
  TODO

author:     Tom Hawkins <tomahawkins@gmail.com>
maintainer: Tom Hawkins <tomahawkins@gmail.com>

license:      BSD3
license-file: LICENSE

homepage: http://tomahawkins.org

build-type:    Simple
cabal-version: >= 1.6

library
    build-depends:
        base       >= 4.2 && < 5,
        vcd        >= 0.1

    exposed-modules:
        Language.LTL

--    extensions:

    if impl(ghc > 6.8)
          ghc-options: -fwarn-tabs
    ghc-options:       -W

source-repository head
    type:     git
    location: git://github.com/tomahawkins/ltl.git

